<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ui.fragment.CrearClienteFragment">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selecciona_cliente"
            android:textStyle="bold"
            android:textSize="20sp"
             />

        <Spinner
            android:id="@+id/clientesSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <!-- TextView -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datos_mascota"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center_horizontal" />

        <!-- Pet data -->
        <EditText
            android:id="@+id/editTextNombreMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_mascota" />

        <EditText
            android:id="@+id/editTextEspecieMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/especie" />

        <EditText
            android:id="@+id/editTextRazaMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/raza" />

        <EditText
            android:id="@+id/editTextTamanioMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tamaño" />

        <EditText
            android:id="@+id/editTextSexoMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sexo" />

        <EditText
            android:id="@+id/editTextFechaNacimientoMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/fecha_nacimiento" />

        <EditText
            android:id="@+id/editTextColorMascota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/color" />





        <Button
            android:id="@+id/buttonGuardarDatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button"
            android:text="@string/Guardar" />
    </LinearLayout>
</androidx.cardview.widget.CardView>