<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo6"
    android:orientation="vertical"
    android:padding="16dp">


    <!-- Título de la actividad -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_citas"
        android:fontFamily="@font/robotos"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_calendar"
        app:tint="@color/colorSecondaryVariant" />
    <TextView
        android:id="@+id/textViewSeleccionarCliente"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selecciona_cliente"
        android:layout_marginBottom="16dp"/>

    <!-- Spinner para seleccionar el cliente -->
    <Spinner
        android:id="@+id/spinnerClientes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:prompt="@string/selecciona_cliente"/>

    <TextView
        android:id="@+id/textViewSeleccionarMascota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/selecciona_mascota"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <!-- Spinner para seleccionar la mascota -->
    <Spinner
        android:id="@+id/spinnerMascotas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/selecciona_mascota"
        android:layout_marginBottom="16dp"/>

    <!-- Campo para seleccionar la fecha de la cita -->
    <Button
        android:id="@+id/buttonSeleccionarFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorSecondaryVariant2"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button"
        android:text="@string/seleccionar_fecha"
        android:layout_marginBottom="16dp"/>

    <!-- Campo para mostrar la fecha seleccionada -->
    <TextView
        android:id="@+id/textViewFechaSeleccionada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/seleccionar_fecha"
        android:layout_marginBottom="16dp"/>

    <!-- Spinner para seleccionar la hora de la cita -->
    <Spinner
        android:id="@+id/spinnerHorarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:prompt="@string/selecciona_horario"/>

    <EditText
        android:id="@+id/editTextMotivoCita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/motivo_cita" />

    <!-- Botón para guardar la cita -->
    <Button
        android:id="@+id/buttonGuardarCita"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/colorSecondaryVariant2"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:radius="100dp"
        android:padding="12dp"
        android:text="@string/guardar_cita"
        android:layout_marginTop="16dp"/>

</LinearLayout>

