<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/IniciarSesionTXT"
        android:fontFamily="@font/robotos"
        android:textSize="25sp"
        android:gravity="center"/>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:lottie_autoPlay="true"
        app:lottie_fileName="user3.json"
        app:lottie_imageAssetsFolder="assets"
        app:lottie_loop="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">



    <EditText
        android:id="@+id/CorreoLogin"
        android:hint="@string/CorreoLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="10dp"
        android:padding="20dp"
        android:fontFamily="@font/robotos"
        android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="15dp">



        <EditText
            android:id="@+id/PassLogin"
            android:hint="@string/PassLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:padding="20dp"
            android:fontFamily="@font/robotos"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/Btn_login2"
        android:text="@string/Btn_Login2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotos"
        android:layout_marginTop="18dp"/>

    <TextView
        android:id="@+id/UsuarioNuevoTXT"
        android:text="@string/UsuarioNuevoTXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="@font/robotos"
        android:layout_marginTop="20dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>