<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo6"
    tools:context=".ui.activities.RegistroActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/robotos"
            android:gravity="center"
            android:text="@string/CrearCuentaTXT"
            android:textSize="25dp" />

            <com.airbnb.lottie.LottieAnimationView
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="user3.json"
                app:lottie_imageAssetsFolder="assets"
                app:lottie_loop="true"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/NombreEt"
                android:hint="@string/NombreEt"
                android:drawablePadding="10dp"
                android:fontFamily="@font/robotos"
                android:drawableStart="@drawable/ic_person"
                android:inputType="textPersonName|textCapWords"
                android:padding="20dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/CorreoEt"
                android:hint="@string/CorreoEt"
                android:drawablePadding="10dp"
                android:fontFamily="@font/robotos"
                android:drawableStart="@drawable/ic_mail"
                android:inputType="textEmailAddress"
                android:padding="20dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ContraseñaEt"
                android:hint="@string/ContraseñaEt"
                android:drawablePadding="10dp"
                android:fontFamily="@font/robotos"
                android:drawableStart="@drawable/ic_lock"
                android:inputType="textPassword"
                android:padding="20dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ConfirmarContraseñaEt"
                android:hint="@string/ConfirmarContraseñaEt"
                android:drawablePadding="10dp"
                android:fontFamily="@font/robotos"
                android:drawableStart="@drawable/ic_lock"
                android:inputType="textPassword"
                android:padding="20dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/RegistrarUsuario"
            android:text="@string/RegistrarUsuario"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/robotos"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/TengounacuentaTXT"
            android:text="@string/TengounacuentaTXT"
            android:fontFamily="@font/robotos"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>