<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuPrincipal">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:padding="0.2dp"
            app:cardBackgroundColor="@color/teal_700"
            app:cardCornerRadius="5dp"
            app:cardUseCompatPadding="true">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotos"
                    android:text="@string/BienvenidoPrincipal"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <ProgressBar
                    android:id="@+id/progressBarDatos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp" />


                <!--NOMBRES-->
                <TextView
                    android:id="@+id/NombresPrincipal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotos"
                    android:text="@string/NombresPrincipal"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/CorreoPrincipal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/robotos"
                    android:text="@string/CorreoPrincipal"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:visibility="gone" />
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/CerrarSesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CerrarSesion" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>