<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <!--animación-->
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_autoPlay="true"
            app:lottie_fileName="vet.json"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_loop="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/robotos"
            android:text="@string/app_name"
            android:textSize="30dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/teal_700"
            android:fontFamily="@font/robotos"
            android:text="@string/Btn_Login"
            android:textSize="20dp" />

        <Button
            android:id="@+id/Btn_Registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/teal_700"
            android:fontFamily="@font/robotos"
            android:text="@string/Btn_Registro"
            android:textSize="20dp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>